Thu Dec 30 13:21:37 2004  Chris Cleeland  <cleeland@ociweb.com>

        * ACE version 5.4.3 released.

Thu Dec 30 12:54:28 2004  Chris Cleeland  <cleeland@ociweb.com>

	* NEWS: Updated to include latest release news.

Thu Dec 30 11:44:51 2004  Steve Huston  <shuston@riverace.com>

        * NEWS: Noted that the autoconf stuff gave up on complete automation
	  via MPC-generation of the Makefile.am files. Autoconf should work
	  mostly for 5.4.3 and completely before 5.5.

Wed Dec 29 18:53:12 2004  Steve Huston  <shuston@riverace.com>

	* tests/run_test.pl: If running a WinCE test, the log file has a
	  .txt suffix, not .log. If it's .log, there's no (easy) way to look
	  at the file on the device itself, so they're named .txt.

Tue Dec 28 19:45:58 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* bin/make_release:

	  Added .png to the list of files that needs to be omitted from
	  LF->CRLF conversions. Thanks to Johnny for pointing this out.

Sat Dec 25 20:58:12 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* bin/make_release:

          Generated textual version of TAO-INSTALL.html and
	  CIAO-INSTALL.html within the distribution.

Sat Dec 25 00:00:00 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* Merry Christmas!

Wed Dec 22 12:47:19 2004  Steve Huston  <shuston@riverace.com>

	* ACE-INSTALL.html: Revised the platforms and support section to
	  reflect the need for actively maintained platforms to be represented
	  on the build scoreboard. Old, unmaintained platforms are subject to
	  deprecation and removal.

Wed Dec 22 11:35:07 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* configure.ac:
	* m4/ace.m4:
	* m4/compiler.m4:
	* m4/platform.m4:

	  Reverted change described in "Sun Dec 19 14:23:53 2004 ..." that
	  changed "$host" to "$target".  The latter is only used by tool
	  chains (compilers, linkers, etc) and is not needed in ACE's
	  case.  To enable cross-compilation support, users should set the